--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="search" type="application/opensearchdescription+xml" title="Exposure" href="https://chriszhang.exposure.co/opensearch.xml">
 
-    <title>Avondale College by Chris Zhang - Exposure</title>
+    <title>Avondale College by Chris Zhang</title>
 
 
     <!-- Typekit Brand theme -->
@@ -77,9 +77,9 @@
     <link rel="apple-touch-icon-precomposed" href="https://chriszhang.exposure.co/apple-touch-icon.png">
 
     <!-- Facebook Open Graph Meta Tags -->
-    <meta property="og:title" content="Chris Zhang - Avondale College on Exposure">
+    <meta property="og:title" content="Chris Zhang - Avondale College">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chriszhang.exposure.co/avondale-college">
+    <meta property="og:url" content="https://chrisyxzhang.github.io/Avondale-College/">
         <meta property="og:image" content="https://exposure.imgix.net/production/posts/5630/cover-photo/cover-1386399811.jpg?fit=crop&amp;w=1200&amp;h=630&amp;q=58&amp;fm=pjpg&amp;auto=format&amp;crop=faces">
         <meta property="og:image" content="https://exposure.imgix.net/production/photos/uyu2fqy50vp74x6rmfye4kgdzllq5miglgup/original.jpg?fit=crop&amp;w=800&amp;h=630&amp;fm=pjpg&amp;auto=format&amp;crop=faces">
         <meta property="og:image" content="https://exposure.imgix.net/production/photos/h239fmk9m43ivn29enj0s01wll2nvcxr38v0/original.jpg?fit=crop&amp;w=800&amp;h=630&amp;fm=pjpg&amp;auto=format&amp;crop=faces">
@@ -114,7 +114,7 @@
         <meta name="keywords" content="Chris,Zhang,photos,photography,Avondale,College">
         <meta name="description" content="Then">
 
-    <link rel="canonical" href="https://chriszhang.exposure.co/avondale-college">
+    <link rel="canonical" href="https://chrisyxzhang.github.io/Avondale-College/">
 
     <script>
     var EXPOSURE_HOST = 'exposure.co',
